--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,9 +33,20 @@ android {
     flavorDimensions "paid_free"
 
     productFlavors {
-        paid {
-            applicationId = "com.udacity.gradle.builditbigger.paid"
+        free {
+            applicationId "com.udacity.gradle.builditbigger.free"
             dimension "paid_free"
+        }
+
+        paid {
+            applicationId "com.udacity.gradle.builditbigger.paid"
+            dimension "paid_free"
+        }
+    }
+
+    sourceSets {
+        free {
+            manifest.srcFile 'src/free/AndroidManifest.xml'
         }
     }
 }
@@ -56,16 +67,15 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
 
-    compile 'com.android.support.test.espresso:espresso-idling-resource:3.0.1'
+    implementation 'com.android.support.test.espresso:espresso-idling-resource:3.0.1'
 
-    androidTestCompile 'com.android.support:support-annotations:25.1.0'
-    androidTestCompile 'com.android.support.test.espresso:espresso-intents:2.2.2'
-    androidTestCompile 'com.android.support.test:rules:0.5'
-
+    androidTestImplementation 'com.android.support:support-annotations:25.1.0'
+    androidTestImplementation 'com.android.support.test.espresso:espresso-intents:2.2.2'
+    androidTestImplementation 'com.android.support.test:rules:0.5'
 
     // Added for AdMob
-    compile 'com.google.android.gms:play-services:11.8.0'
+    freeImplementation 'com.google.android.gms:play-services:11.8.0'
 //    compile project(':JavaJokes')
-    compile project(':backend')
-    compile project(':androidlibrary')
+    implementation project(':backend')
+    implementation project(':androidlibrary')
 }
